konfiguracja Bazy danych, Identity Core, Wypelnienie bazy

--- a/CMS_APP/appsettings.json
+++ b/CMS_APP/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CMS_APP-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=KOBAS;Database=CMS_APP_DB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DataProtectionKeysContext": "Server=KOBAS;Database=CMS_APP_DB_Protection_Keys;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
       "LogLevel": {
@@ -16,5 +17,37 @@
       }
     }
   },
-"AllowedHosts": "*"
+  "AdminUserOptions": {
+    "Email": "admin@cms.com",
+    "Password": "Test@123",
+    "Username": "admin",
+    "Country": "Poland",
+    "Firstname": "Admin",
+    "Lastname": "Admin",
+    "ProfilPic":  "/images/profile.jpeg"
+  },
+  "AppUserOptions": {
+    "Email": "user@cms.com",
+    "Password": "Test@123",
+    "Username": "user",
+    "Country": "Poland",
+    "Firstname": "User",
+    "Lastname": "User",
+    "ProfilPic": "/images/profile.jpeg"
+  },
+  "IdentityDefaultOptions": {
+    "PasswordRequireDigit": true,
+    "PasswordRequireLength": 6,
+    "PasswordRequireAlphanumeric": true,
+    "PasswordRequireUppercase": true,
+    "PasswordRequireLowercase": true,
+    "PasswordRequireUniqueChars": 0,
+    "LockoutDefaultLockoutTimeSpanInMinutes": 30,
+    "LockoutMaxFailedAccessAttempts": 5,
+    "LockoutAllowedForNewUsers": false,
+    "UserRequireUniqueEmail": false,
+    "SignInRequireConfirmedEmail": false,
+    "AccessDeniedPath": "/Account/AccessDenied"
+  },
+  "AllowedHosts": "*"
 }
